feat(*): work on wps conditional parameter value